--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
        <li ng-repeat="item in ToBuy.to_buy">{{item.name}}: {{item.quantity}}<button class="btn btn-default" ng-click="ToBuy.removeItem($index);";>
          <span class="glyphicon glyphicon-ok"></span> Bought</button></li>
      </ul>
-     <div class="emptyMessage" ng-if="to_buy">Everything is bought!</div>
+     <div class="emptyMessage" ng-if="ToBuy.to_buy">Everything is bought!</div>
     </div>
 
     <!-- Already Bought List -->
@@ -46,7 +46,7 @@
      <ul>
        <li ng-repeat="item in Bought.bought">{{item.name}}: {{item.quantity}}</li>
      </ul>
-     <div class="emptyMessage" ng-if="bought">Nothing bought yet.</div>
+     <div class="emptyMessage" ng-if="Bought.bought">Nothing bought yet.</div>
     </div>
   </div>
 </div>
