--- a/index.html
+++ b/index.html
@@ -34,19 +34,20 @@
     <div class="col-md-6">
      <h2>To Buy:</h2>
      <ul>
-       <li ng-repeat="item in ToBuy.to_buy">{{item.name}}: {{item.quantity}}<button class="btn btn-default" ng-click="ToBuy.removeItem($index);";>
-         <span class="glyphicon glyphicon-ok"></span> Bought</button></li>
+       <li ng-repeat="item in tobuy_ctrl.to_buy">{{item.name}}: {{item.quantity}}
+          <button class="btn btn-default" ng-click="ToBuy.removeItem($index);";>
+            <span class="glyphicon glyphicon-ok"></span> Bought</button></li>
      </ul>
-     <div class="emptyMessage" ng-if="ToBuy.to_buy">Everything is bought!</div>
+     <div class="emptyMessage" ng-if="tobuy_ctrl.to_buy">Everything is bought!</div>
     </div>
 
     <!-- Already Bought List -->
     <div class="col-md-6" ng-controller="AlreadyBoughtShoppingController as bought_ctrl">
      <h2>Already Bought:</h2>
      <ul>
-       <li ng-repeat="item in Bought.bought">{{item.name}}: {{item.quantity}}</li>
+       <li ng-repeat="item in bought_ctrl.bought">{{item.name}}: {{item.quantity}}</li>
      </ul>
-     <div class="emptyMessage" ng-if="Bought.bought">Nothing bought yet.</div>
+     <div class="emptyMessage" ng-if="bought_ctrl.bought">Nothing bought yet.</div>
     </div>
   </div>
 </div>
