--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <button class="btn btn-default" ng-click="tobuy_ctrl.removeItem($index);";>
             <span class="glyphicon glyphicon-ok"></span> Bought</button></li>
      </ul>
-     <div class="emptyMessage" ng-if="tobuy_ctrl.to_buy.length">Everything is bought!</div>
+     <div class="emptyMessage" ng-if="!tobuy_ctrl.to_buy.length">Everything is bought!</div>
     </div>
 
     <!-- Already Bought List -->
@@ -47,7 +47,7 @@
      <ul>
        <li ng-repeat="item in bought_ctrl.bought">{{item.name}}: {{item.quantity}}</li>
      </ul>
-     <div class="emptyMessage" ng-if="bought_ctrl.bought.length">Nothing bought yet.</div>
+     <div class="emptyMessage" ng-if="!bought_ctrl.bought.length">Nothing bought yet.</div>
     </div>
   </div>
 </div>
